--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Xomersdp的博客",
+    "subTitle":"Xomersdp，一个喜欢接触新鲜事物的少年...",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/227079389?v=4",
     "GMEEK_VERSION":"last"
 }
