--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Xomersdp的博客",
-    "subTitle":"Xomersdp，一个喜欢接触新鲜事物的少年...",
+    "subTitle":"Xomersdp，一个来自中国喜欢接触新鲜事物的少年...",
     "avatarUrl":"https://avatars.githubusercontent.com/u/227079389?v=4",
     "GMEEK_VERSION":"last"
 }
